Heading and nav bar

--- a/index.html
+++ b/index.html
@@ -11,21 +11,29 @@
     <title>TECH TALK 6.0</title>
   </head>
   <body>
-    <nav>
-      <div class="logo">
-        <img src="img/logo.png" alt="softamplify logo" />
-        <h2>Evento</h2>
+    <header>
+      <nav>
+        <div class="logo">
+          <img src="img/logo.png" alt="softamplify logo" />
+          <h2>Tech Talk 6.0</h2>
+        </div>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">SPEAKERS</a></li>
+          <li><a href="#">SCHEDULE</a></li>
+          <li><a href="#">LOCATION</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <li class="confirm-seat"><a href="#">CONFIRM YOUR SEAT</a></li>
+        </ul>
+      </nav>
+
+      <div class="heading">
+        <h1 class="softamplify">SOFTAMPLIFY</h1>
+        <h1>DESIGN</h1>
+        <h1>WEEK</h1>
       </div>
-      <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">SPEAKERS</a></li>
-        <li><a href="#">SCHEDULE</a></li>
-        <li><a href="#">LOCATION</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">CONTACT</a></li>
-        <li class="confirm-seat"><a href="#">CONFIRM YOUR SEAT</a></li>
-      </ul>
-    </nav>
+    </header>
   </body>
 
   <script src=""></script>
