--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           <li><a href="#">LOCATION</a></li>
           <li><a href="#">BLOG</a></li>
           <li><a href="#">CONTACT</a></li>
-          <li class="confirm-seat"><a href="#">CONFIRM YOUR SEAT</a></li>
+          <li class="confirm-seat">
+            <a class="confirm-seat" href="#">CONFIRM YOUR SEAT</a>
+          </li>
         </ul>
       </nav>
 
@@ -33,8 +35,21 @@
         <h1>DESIGN</h1>
         <h1>WEEK</h1>
       </div>
+
+      <div class="ticket-section">
+        <h2>21st SEPT 2022</h2>
+        <h5>3968 CARSON STREET, SAN DIEGO, CA, 92101</h5>
+        <span
+          ><p id="time" class="time"></p>
+          <p id="date" class="date">Current Date:</p>
+        </span>
+        <br />
+        <button class="buy-ticket" id="buy-ticket">
+          <a href="#">Buy Ticket</a>
+        </button>
+      </div>
     </header>
   </body>
 
-  <script src=""></script>
+  <script src="app.js"></script>
 </html>
